# picar2-yahboom

./: .envrc  .gitignore  CLAUDE.md  Makefile  README.md  activate.sh  setup-workspace.sh  west.yml  zephyr-env.sh
.claude/skills/: yahboom-build.skill
docs/: links.txt
docs/plans/: protocol.md  timesync.md
drivers/: CMakeLists.txt  Kconfig
drivers/input/: CMakeLists.txt  Kconfig  Kconfig.sbus_receiver  Kconfig.stm32_qdec  input_stm32_qdec.c  (+1 more)
etc/: 99-usb-serial.rules  zephyr-shell.service
tests/drivers/input/sbus_receiver/: CMakeLists.txt  prj.conf
tests/drivers/input/sbus_receiver/boards/: native_sim.overlay
tests/drivers/input/sbus_receiver/include/: pinctrl_soc.h
tests/drivers/input/sbus_receiver/src/: main.c
tests/drivers/pwm/pwm_servo/: CMakeLists.txt  prj.conf
tests/drivers/pwm/pwm_servo/boards/: native_sim.overlay
tests/drivers/pwm/pwm_servo/dts/bindings/: test,fake-pwm.yaml
tests/drivers/pwm/pwm_servo/src/: fake_pwm.c  fake_pwm.h  main.c
tools/: imu_calibrate.py  imu_verify_uart.py  picar2_gui.py  pid_tuner.py  servo_center.py
yahboom/: CMakeLists.txt  Kconfig  prj.conf
yahboom/boards/: yahboom_ros_stm32f103.conf  yahboom_ros_stm32f103.overlay
yahboom/scripts/: pid_test.py
yahboom/src/: battery.c  battery.h  buzzer.c  buzzer.h  comms.c  comms.h  comms_mon.c  comms_mon.h  control.c  control.h  imu.c  imu.h  main.c  motor.c  motor.h  power.h  protocol.c  protocol.h  rc.c  rc.h  selftest.c  servo.c  servo.h
yahboom/test/: test_control.cpp
zephyr_patches/: rtio_workq_thread_name.patch  uart_stm32_async_rxne_irq_guard.patch
(+59 files in other folders)
